<resources>
    <string name="app_name">WanAndroid</string>

    <string name="tab_home">首页</string>
    <string name="tab_project">项目</string>
    <string name="tab_square">广场</string>
    <string name="tab_official_account">公众号</string>
    <string name="tab_mine">我的</string>
    <string name="search_text">关键字搜索</string>
    <string name="publish_article">发布文章</string>
    <string name="article_title">文章标题</string>
    <string name="less_than_100">100字以内</string>
    <string name="article_url">文章链接</string>
    <string name="hint_article_url">请输入链接</string>
    <string name="article_share_title">分享须知</string>
    <string name="article_share_information">1. 只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场 tab;\n2. CSDN，掘金，简书等官方博客站点会直接通过，不需要审核;\n3. 其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响;\n4. 目前处于测试阶段，如果你发现500等错误，可以向我提交日志，让我们一起使网站变得更好。\n5. 由于本站只有我一个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系…</string>
    <string name="share_article">分享</string>
    <string name="please_input_article_content">请输入文章标题</string>
    <string name="publish_success">发布成功</string>
    <string name="login">登录</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_again_password">请再次输入密码</string>
    <string name="login_back">暂不登录</string>
    <string name="back">返回</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="my_coin">我的积分</string>
    <string name="cur_coins">当前积分:</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_article">我的文章</string>
    <string name="wan_android_web">WanAndroid网站</string>
    <string name="settings">设置</string>
    <string name="login_first">请先登录</string>
    <string name="default_id">--</string>
    <string name="article_top">置顶</string>
    <string name="square_title">体系</string>
    <string name="view_empty_msg">空空如也</string>
    <string name="setting">设置</string>
    <string name="logout">退出登录</string>
    <string name="lisper_request">拼命请求中…</string>
    <string name="clear_cache">清理缓存</string>
    <string name="version">版本</string>
    <string name="author">作者</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="history">历史记录</string>
    <string name="clear_history">清空</string>
    <string name="coin">积分:</string>
    <string name="clear_history_title">清空历史记录</string>
    <string name="delete">删除</string>
    <string name="hot_key">热门搜索</string>
    <string name="hot_web">常用网站</string>
    <string name="share_to">分享至</string>
    <string name="share_wx">微信</string>
    <string name="wx_circle">朋友圈</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="qq_zone">QQ空间</string>
</resources>