<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="stateViewModel"
            type="app.lonzh.lisper.vm.state.home.PublishStateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.hjq.bar.TitleBar
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/publish_titleBar"
            app:leftColor="@color/title_color"
            app:leftTitle="@string/publish_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.core.widget.NestedScrollView
            app:layout_constraintTop_toBottomOf="@id/publish_titleBar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="@dimen/text_14sp"
                    android:layout_margin="@dimen/dp_20"
                    android:textColor="@android:color/black"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/tv_article"
                    android:text="@string/article_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edt_article_content"
                    android:background="@drawable/shape_publish_edt_bg"
                    android:textColorHint="@color/hint_text_color"
                    android:hint="@string/less_than_100"
                    android:maxEms="100"
                    android:maxLines="6"
                    android:textSize="@dimen/text_14sp"
                    android:text="@={stateViewModel.articleContent}"
                    android:textColor="@color/title_color"
                    android:minLines="6"
                    android:padding="@dimen/dp_8"
                    android:gravity="left|top"
                    android:lineSpacingExtra="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintRight_toRightOf="@id/tv_article"
                    app:layout_constraintLeft_toLeftOf="@id/tv_article"
                    app:layout_constraintTop_toBottomOf="@id/tv_article"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="@dimen/text_14sp"
                    android:layout_margin="@dimen/dp_20"
                    android:textColor="@android:color/black"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edt_article_content"
                    android:id="@+id/tv_article_url"
                    android:text="@string/article_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:background="@drawable/shape_publish_edt_bg"
                    android:textColorHint="@color/hint_text_color"
                    android:hint="@string/hint_article_url"
                    android:maxEms="100"
                    android:maxLines="2"
                    android:minLines="1"
                    android:padding="@dimen/dp_8"
                    android:gravity="left|top"
                    android:id="@+id/edt_article_url"
                    android:textSize="@dimen/text_14sp"
                    android:text="@={stateViewModel.articleUrl}"
                    android:textColor="@color/title_color"
                    android:lineSpacingExtra="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintRight_toRightOf="@id/tv_article_url"
                    app:layout_constraintLeft_toLeftOf="@id/tv_article_url"
                    app:layout_constraintTop_toBottomOf="@id/tv_article_url"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="@dimen/dp_20"
                    app:layout_constraintRight_toRightOf="@id/edt_article_url"
                    app:layout_constraintLeft_toLeftOf="@id/edt_article_url"
                    app:layout_constraintTop_toBottomOf="@id/edt_article_url"
                    android:id="@+id/tv_tips"
                    android:gravity="center"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/article_share_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/article_share_information"
                    android:textColor="@color/search_text"
                    android:textSize="@dimen/text_12sp"
                    android:lineSpacingExtra="@dimen/dp_4"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintRight_toRightOf="@id/edt_article_url"
                    app:layout_constraintLeft_toLeftOf="@id/edt_article_url"
                    app:layout_constraintTop_toBottomOf="@id/tv_tips"
                    android:id="@+id/tv_share_tip_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_margin="@dimen/dp_20"
                    android:textColor="@android:color/white"
                    android:background="@drawable/shape_btn_share_article"
                    android:gravity="center"
                    android:textSize="@dimen/text_20sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_share_tip_content"
                    android:text="@string/share_article"
                    android:id="@+id/tv_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>