<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="app.lonzh.lisper.vm.state.login.RegisterStateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"
            android:layout_height="wrap_content"/>

        <com.hjq.bar.TitleBar
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/register_titleBar"
            app:leftColor="@color/title_color"
            app:backButton="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_title"
            app:layout_constraintLeft_toLeftOf="@id/edt_account"
            android:textStyle="bold"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_24sp"
            app:layout_constraintBottom_toBottomOf="@id/guide"
            app:layout_constraintTop_toBottomOf="@id/register_titleBar"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
            android:text="@={vm.account}"
            android:background="@null"
            android:layout_marginStart="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/guide"
            android:hint="@string/please_input_account"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/title_color"
            android:id="@+id/edt_account"
            android:textSize="@dimen/text_14sp"
            android:inputType="text"
            android:paddingStart="@dimen/dp_8"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"/>

        <ImageView
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:id="@+id/iv_clear"
            android:padding="@dimen/dp_8"
            android:minWidth="@dimen/dp_48"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/dp_20"
            app:layout_constraintBottom_toBottomOf="@id/edt_account"
            app:layout_constraintTop_toTopOf="@id/edt_account"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_login_clear"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"/>

        <View
            android:id="@+id/line_account"
            app:layout_constraintRight_toRightOf="@id/edt_account"
            app:layout_constraintLeft_toLeftOf="@id/edt_account"
            app:layout_constraintTop_toBottomOf="@id/edt_account"
            android:background="@color/line_color"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_1"/>

        <com.google.android.material.textfield.TextInputEditText
            android:text="@={vm.password}"
            android:background="@null"
            app:layout_constraintTop_toBottomOf="@id/line_account"
            app:layout_constraintLeft_toLeftOf="@id/edt_account"
            app:layout_constraintRight_toRightOf="@id/edt_account"
            android:hint="@string/please_input_password"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/title_color"
            android:id="@+id/edt_password"
            android:textSize="@dimen/text_14sp"
            android:paddingStart="@dimen/dp_8"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_48"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:id="@+id/iv_password_eye"
            app:layout_constraintBottom_toBottomOf="@id/edt_password"
            app:layout_constraintTop_toTopOf="@id/edt_password"
            app:layout_constraintRight_toRightOf="@id/edt_account"
            android:src="@drawable/selector_login_eye"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"/>

        <View
            android:id="@+id/line_pwd"
            app:layout_constraintRight_toRightOf="@id/edt_password"
            app:layout_constraintLeft_toLeftOf="@id/edt_password"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            android:background="@color/line_color"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_1"/>

        <com.google.android.material.textfield.TextInputEditText
            android:text="@={vm.againPassword}"
            android:background="@null"
            app:layout_constraintTop_toBottomOf="@id/line_pwd"
            app:layout_constraintLeft_toLeftOf="@id/edt_account"
            app:layout_constraintRight_toRightOf="@id/edt_account"
            android:hint="@string/please_input_again_password"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/title_color"
            android:id="@+id/edt_again_password"
            android:textSize="@dimen/text_14sp"
            android:paddingStart="@dimen/dp_8"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_48"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:id="@+id/iv_again_password_eye"
            app:layout_constraintBottom_toBottomOf="@id/edt_again_password"
            app:layout_constraintTop_toTopOf="@id/edt_again_password"
            app:layout_constraintRight_toRightOf="@id/edt_account"
            android:src="@drawable/selector_login_eye"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"/>

        <View
            android:id="@+id/line_again_pwd"
            app:layout_constraintRight_toRightOf="@id/edt_again_password"
            app:layout_constraintLeft_toLeftOf="@id/edt_again_password"
            app:layout_constraintTop_toBottomOf="@id/edt_again_password"
            android:background="@color/line_color"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_1"/>

        <TextView
            android:layout_margin="@dimen/dp_20"
            android:textColor="@android:color/white"
            android:background="@drawable/shape_btn_share_article"
            android:gravity="center"
            android:textSize="@dimen/btn_text_size"
            app:layout_constraintTop_toBottomOf="@id/line_again_pwd"
            android:text="@string/register"
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintLeft_toLeftOf="@id/tv_register"
            app:layout_constraintRight_toRightOf="@id/tv_register"
            app:layout_constraintTop_toBottomOf="@id/tv_register"
            android:textSize="@dimen/text_14sp"
            android:id="@+id/tv_back"
            android:textColor="@color/colorAccent"
            android:text="@string/back"
            android:gravity="center"
            android:minWidth="@dimen/dp_100"
            android:layout_width="wrap_content"
            android:minHeight="@dimen/dp_48"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>